testing - add tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "D": "1.0.0",
     "clsx": "^1.1.1",
+    "jest-watch-typeahead": "0.6.5",
     "portal-modules": "^1.0.52",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
