--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.4",
-    "@mui/icons-material": "^5.4.4",
+    "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.4.4",
     "@mui/styles": "^5.4.4",
     "@testing-library/jest-dom": "^5.14.1",
